@@ -20,23 +20,31 @@ tasks.withType(Test).configureEach {
         "--add-opens=java.base/java.nio=ALL-UNNAMED",
         "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
     ]
+    if ((JavaVersion.current().majorVersion as int) < 24) {
+        jvmArgs += ["-Djava.security.manager=allow"]
+    }
 }
 
 graalvmNative {
+    binaries {
+        test {
+            if ((JavaVersion.current().majorVersion as int) < 24) {
+                runtimeArgs.add("-Djava.security.manager=allow")
+            }
+        }
+        all {
+            buildArgs.addAll([
+                '--add-opens=java.base/java.nio=ALL-UNNAMED',
+                '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED'
+            ])
+        }
+    }
     agent {
         defaultMode = "conditional"
         modes {
             conditional {
                 userCodeFilterPath = "user-code-filter.json"
             }
-        }
-    }
-    binaries {
-        all {
-            buildArgs.addAll([
-                '--add-opens=java.base/java.nio=ALL-UNNAMED',
-                '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED'
-            ])
         }
     }
 }
